force-app/main/default/objects/Cancelled_Unit_Detail__c/Cancelled_Unit_Detail__c.object-meta.xml
<CustomObject>
    <label>Cancelled Unit Detail</label>
    <nameField>
        <displayFormat>CUD-{00000}</displayFormat>
        <label>Cancelled Unit Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancelled Unit Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>