force-app/main/default/objects/Cancelled_Unit_Detail__c/fields/Old_Booking__c.field-meta.xml
<CustomField>
    <fullName>Old_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Cancelled Unit Details</relationshipLabel>
    <relationshipName>Exit_Unit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>