force-app/main/default/objects/Cancelled_Unit_Detail__c/fields/Old_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Booking_Date__c</fullName>
    <formula>Old_Booking__r.Booking_Date__c</formula>
    <label>Old Booking Date</label>
    <type>Date</type>
</CustomField>