force-app/main/default/objects/Cancelled_Unit_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>New_Sale_Approval__c</columns>
    <columns>New_Booking__c</columns>
    <columns>New_Unit__c</columns>
    <columns>Amount__c</columns>
    <columns>Old_Booking__c</columns>
    <columns>Old_Unit__c</columns>
    <columns>Old_Booking_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>